# metr4912

./: .bash_aliases  .bashrc  .gitignore  push.sh
test_opensim/: CMakeLists.txt
test_opensim/build2/: CMakeCache.txt  Makefile  cmake_install.cmake  opensim_import_test  opensim_test  os4bimanual.osim
test_opensim/build2/Geometry/: 3midph.stl  3midph_mirror.stl  4midph_mirror.stl  4proxph_mirror.stl  5mc.stl  5mc_mirror.stl  arm_r_1mc.stl  arm_r_2midph.stl  arm_r_2proxph.stl  arm_r_2proxph_mirror.stl  arm_r_3distph.stl  arm_r_3distph_mirror.stl  arm_r_3midph_mirror.stl  arm_r_4proxph.stl  arm_r_5mc.stl  arm_r_lunate_mirror.stl  arm_r_scaphoid.stl  arm_r_triquetrum.stl  arm_r_triquetrum_mirror.stl  box.stl  calcaneous_lv.stl  calcaneous_lv_mirror.stl  cerv1_mirror.stl  cerv1sm_mirror.stl  cerv2sm_mirror.stl  cerv3_mirror.stl  cerv4sm_mirror.stl  cerv5sm_mirror.stl  cerv6_mirror.stl  cerv7_mirror.stl  checkered_floor.stl  clavicle_lvsm_mirror.stl  clavicle_mirror.stl  cone_mirror.stl  cylinder_mirror.stl  distal_phalanx1_lvs_mirror.stl  distal_phalanx2_rvs.stl  distal_phalanx2_rvs_mirror.stl  distal_phalanx3_lvs.stl  distal_phalanx3_lvs_mirror.stl  (+112 more)
test_opensim/build2/Geometry1/: 1mc.vtp  2mc.vtp  2mc_mirror.vtp  2midph.vtp  2midph_mirror.vtp  2proxph_mirror.vtp  3distph.vtp  3distph_mirror.vtp  3mc_mirror.vtp  3midph.vtp  3proxph_mirror.vtp  5mc.vtp  (+341 more)
test_opensim/src/: MoBL_ARMS_bimanual_6_2_21.osim  exampleMoco.py  mocolib.py  opensim-import-test.cpp  opensim-impot-test.py  opensim-test.cpp  os4bimanual.osim  sim-moco.cpp  sim-moco.py  sim.py  vtk2stl.py  vtk2vtp.py
(+800 files in other folders)
